# ESP32_GFX_ili9328_8bit

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig
core/: CMakeLists.txt  Kconfig.projbuild
core/Inc/: main.h
core/Src/: main.cpp
drivers/lcd/: CMakeLists.txt  GFX.cpp  GFX.h
drivers/lcd/drv/: LCD_Driver.h
drivers/lcd/fonts/: font12.c  font16.c  font20.c  font24.c  font8.c  fonts.h
drivers/lcd/ili932x/: LCD_ili9328_8bit.cpp  LCD_ili9328_8bit.h  LCD_ili932x.cpp  LCD_ili932x.h
drivers/lcd/io/: LCD_IO.h  LCD_IO_8bit.cpp  LCD_IO_8bit.h
